Fix env setting
