# routes/api/register.js
@@ -5,15 +5,13 @@ const crypto = require('crypto');
 
 const router = express.Router();
 
-
 router.post("/", async(req, res, next) => {
-    let { email, password, nickname } = req.body;
+    let { email, password, name } = req.body;
     let result = {"results":{}, "status":""};
     const hashed = crypto.createHmac('sha256', SHA_KEY).update(password).digest('hex');
 
-    let ans_msg = "";
     const user = await sequelize.user.create(
-            {email: email, password: hashed, name: nickname})
+            {email: email, password: hashed, name: name})
         .catch(err => {
             result['status'] = "conflict";
             res.status(409).send(result);
